--- a/Application/FireNote/Modules/SplashViewController/SplashViewController.storyboard
+++ b/Application/FireNote/Modules/SplashViewController/SplashViewController.storyboard
@@ -10,7 +10,7 @@
         <!--Splash View Controller-->
         <scene sceneID="uWp-Nb-M5d">
             <objects>
-                <viewController storyboardIdentifier="SplashViewController" id="BYw-Ne-pWf" customClass="SplashViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SplashViewController" id="BYw-Ne-pWf" customClass="SplashViewController" customModule="FireNote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oE0-IE-lsI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
