--- a/Application/FireNote/Modules/Auth/Registration/RegistrationViewController.storyboard
+++ b/Application/FireNote/Modules/Auth/Registration/RegistrationViewController.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -42,7 +43,7 @@
                                                 <rect key="frame" x="20" y="269.5" width="374" height="279"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lW2-Fa-8UH">
-                                                        <rect key="frame" x="0.0" y="102" width="42" height="28.5"/>
+                                                        <rect key="frame" x="0.0" y="102" width="44.5" height="28.5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="28.5" id="nNP-pi-poX"/>
                                                         </constraints>
@@ -59,7 +60,7 @@
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="71f-oU-mF3">
-                                                        <rect key="frame" x="0.0" y="8" width="82" height="29"/>
+                                                        <rect key="frame" x="0.0" y="8" width="85" height="29"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="29" id="7xn-51-qLY"/>
                                                         </constraints>
@@ -76,7 +77,7 @@
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="adA-0d-UWp">
-                                                        <rect key="frame" x="205.5" y="8" width="79.5" height="29"/>
+                                                        <rect key="frame" x="205.5" y="8" width="84.5" height="29"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="29" id="ar4-5L-scd"/>
                                                         </constraints>
@@ -85,7 +86,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WmB-xn-7ku">
-                                                        <rect key="frame" x="0.0" y="195.5" width="74.5" height="28.5"/>
+                                                        <rect key="frame" x="0.0" y="195.5" width="80" height="28.5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="28.5" id="nsl-Mh-tcl"/>
                                                         </constraints>
@@ -136,7 +137,7 @@
                                                     <constraint firstItem="adA-0d-UWp" firstAttribute="leading" secondItem="Orz-8C-urO" secondAttribute="leading" id="ztA-Q3-fIp"/>
                                                 </constraints>
                                             </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qeq-G1-Ax2">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qeq-G1-Ax2" customClass="PrimaryButton" customModule="FireNote" customModuleProvider="target">
                                                 <rect key="frame" x="20" y="568.5" width="374" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="SdM-qd-toD"/>
@@ -147,16 +148,16 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dO8-rJ-E3a" userLabel="Register account View">
-                                                <rect key="frame" x="86" y="743" width="242" height="55"/>
+                                                <rect key="frame" x="77" y="743" width="260" height="55"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Already have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="44w-kG-wUP">
-                                                        <rect key="frame" x="0.0" y="14" width="185" height="27"/>
+                                                        <rect key="frame" x="0.0" y="17.5" width="197" height="20"/>
                                                         <fontDescription key="fontDescription" name="Baloo2-Regular" family="Baloo 2" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xQR-gg-Lle">
-                                                        <rect key="frame" x="195" y="8" width="47" height="39"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xQR-gg-Lle" customClass="TextButton" customModule="FireNote" customModuleProvider="target">
+                                                        <rect key="frame" x="207" y="8" width="53" height="39"/>
                                                         <fontDescription key="fontDescription" name="Baloo2-Regular" family="Baloo 2" pointSize="17"/>
                                                         <state key="normal" title="Log In."/>
                                                         <connections>
@@ -176,7 +177,7 @@
                                                 </constraints>
                                             </view>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="Fza-56-NRs" secondAttribute="trailing" constant="20" id="539-XH-Bfm"/>
                                             <constraint firstItem="2nt-t4-AmP" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Fza-56-NRs" secondAttribute="bottom" constant="25" id="B9r-vb-tl2"/>
@@ -196,6 +197,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="ySo-cl-gUv" secondAttribute="bottom" id="04T-ZP-x5f"/>
                                     <constraint firstAttribute="trailing" secondItem="ySo-cl-gUv" secondAttribute="trailing" id="YKf-yd-6ib"/>
@@ -208,7 +210,7 @@
                                 <viewLayoutGuide key="frameLayoutGuide" id="5Kk-4f-0Qq"/>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" name="background_main"/>
                         <constraints>
                             <constraint firstItem="o1Z-5O-y3c" firstAttribute="bottom" secondItem="eAp-tx-ZGY" secondAttribute="bottom" id="Pjb-SO-dtB"/>
                             <constraint firstItem="eAp-tx-ZGY" firstAttribute="top" secondItem="o1Z-5O-y3c" secondAttribute="top" id="SUw-N4-KA7"/>
@@ -229,4 +231,9 @@
             <point key="canvasLocation" x="-104.34782608695653" y="55.580357142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="background_main">
+            <color red="0.99278582334931287" green="0.94720426659672052" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
