--- a/Application/FireNote/Modules/Main/Base.lproj/MainViewController.storyboard
+++ b/Application/FireNote/Modules/Main/Base.lproj/MainViewController.storyboard
@@ -16,29 +16,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Main" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M1G-TW-dn4">
-                                <rect key="frame" x="186" y="358" width="37" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" name="text_primary"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z9d-KY-QEy" customClass="HUDLoaderView" customModule="FireNote" customModuleProvider="target">
+                                <rect key="frame" x="157" y="428" width="100" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="iuU-MP-fy1"/>
+                                    <constraint firstAttribute="width" constant="100" id="wxb-Ls-WVh"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" name="background_main"/>
+                        <constraints>
+                            <constraint firstItem="z9d-KY-QEy" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="I7L-CY-MUb"/>
+                            <constraint firstItem="z9d-KY-QEy" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Z84-kP-nwV"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="133" y="139"/>
+            <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
         </scene>
     </scenes>
     <resources>
         <namedColor name="background_main">
             <color red="0.99215686274509807" green="0.94509803921568625" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="text_primary">
-            <color red="0.067000001668930054" green="0.067000001668930054" blue="0.067000001668930054" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
