--- a/Application/FireNote/Modules/Auth/Login/LoginViewController.storyboard
+++ b/Application/FireNote/Modules/Auth/Login/LoginViewController.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7AP-hi-ib8">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -20,20 +20,20 @@
             <objects>
                 <viewController storyboardIdentifier="LoginViewController" id="7AP-hi-ib8" customClass="LoginViewController" customModule="FireNote" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5qE-ge-Ipt">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Yma-TR-BFL">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UUV-y3-LkF" customClass="TPKeyboardAvoidingScrollView">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2rH-qg-7Zk" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pfI-cS-kYH">
-                                                <rect key="frame" x="20" y="234.5" width="374" height="56"/>
+                                                <rect key="frame" x="20" y="170" width="335" height="56"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="56" id="34d-4t-WYR"/>
                                                 </constraints>
@@ -42,16 +42,19 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IBm-Ox-TQc" userLabel="Fields View">
-                                                <rect key="frame" x="20" y="315.5" width="374" height="187"/>
+                                                <rect key="frame" x="20" y="251" width="335" height="187"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XsN-em-hDI">
                                                         <rect key="frame" x="0.0" y="10" width="42" height="28.5"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="28.5" id="yo0-JP-UPU"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" name="Baloo2-Regular" family="Baloo 2" pointSize="18"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g1P-Kl-qWO" customClass="PrimaryTextField" customModule="FireNote" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="43.5" width="374" height="40"/>
+                                                        <rect key="frame" x="0.0" y="43.5" width="335" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="uiG-8E-gLe"/>
                                                         </constraints>
@@ -60,12 +63,15 @@
                                                     </textField>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yUc-0l-1ev">
                                                         <rect key="frame" x="0.0" y="103.5" width="74.5" height="28.5"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="28.5" id="yEo-1a-TvE"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" name="Baloo2-Regular" family="Baloo 2" pointSize="18"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jVp-KT-yfs" customClass="PasswordTextField" customModule="FireNote" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="137" width="374" height="40"/>
+                                                        <rect key="frame" x="0.0" y="137" width="335" height="40"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="40" id="vzW-d3-4l8"/>
                                                         </constraints>
@@ -89,7 +95,7 @@
                                                 </constraints>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bGT-ta-0m0" customClass="PrimaryButton" customModule="FireNote" customModuleProvider="target">
-                                                <rect key="frame" x="20" y="512.5" width="374" height="40"/>
+                                                <rect key="frame" x="20" y="448" width="335" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="Blx-a4-bcD"/>
                                                 </constraints>
@@ -99,7 +105,7 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bd0-jY-azI" userLabel="Register account View">
-                                                <rect key="frame" x="53.5" y="743" width="307.5" height="55"/>
+                                                <rect key="frame" x="34" y="572" width="307.5" height="55"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account yet?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzv-5e-dRN">
                                                         <rect key="frame" x="0.0" y="14" width="194.5" height="27"/>
@@ -127,7 +133,7 @@
                                                 </constraints>
                                             </view>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Ywd-Wb-It7">
-                                                <rect key="frame" x="142" y="20" width="130" height="130"/>
+                                                <rect key="frame" x="122.5" y="20" width="130" height="130"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="130" id="kdC-SO-SZ4"/>
                                                     <constraint firstAttribute="width" constant="130" id="z3x-m5-cR8"/>
@@ -136,6 +142,7 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="bd0-jY-azI" firstAttribute="top" relation="greaterThanOrEqual" secondItem="bGT-ta-0m0" secondAttribute="bottom" constant="10" id="1lq-el-IN6"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bd0-jY-azI" secondAttribute="trailing" constant="10" id="Bmj-WC-fHS"/>
                                             <constraint firstItem="Ywd-Wb-It7" firstAttribute="top" secondItem="2rH-qg-7Zk" secondAttribute="top" constant="20" id="Csw-oA-wHW"/>
                                             <constraint firstItem="pfI-cS-kYH" firstAttribute="leading" secondItem="2rH-qg-7Zk" secondAttribute="leading" constant="20" id="Gcg-3s-be0"/>
@@ -143,13 +150,11 @@
                                             <constraint firstItem="IBm-Ox-TQc" firstAttribute="leading" secondItem="2rH-qg-7Zk" secondAttribute="leading" constant="20" id="MtT-GX-8nY"/>
                                             <constraint firstItem="IBm-Ox-TQc" firstAttribute="top" secondItem="pfI-cS-kYH" secondAttribute="bottom" constant="25" id="OfW-j1-gV3"/>
                                             <constraint firstItem="bd0-jY-azI" firstAttribute="centerX" secondItem="2rH-qg-7Zk" secondAttribute="centerX" id="RiT-0l-MDe"/>
-                                            <constraint firstItem="IBm-Ox-TQc" firstAttribute="centerY" secondItem="2rH-qg-7Zk" secondAttribute="centerY" id="Tfa-ET-xdn"/>
                                             <constraint firstAttribute="trailing" secondItem="pfI-cS-kYH" secondAttribute="trailing" constant="20" id="UQN-wr-oop"/>
                                             <constraint firstItem="bGT-ta-0m0" firstAttribute="top" secondItem="IBm-Ox-TQc" secondAttribute="bottom" constant="10" id="XxE-aP-ZfN"/>
                                             <constraint firstItem="Ywd-Wb-It7" firstAttribute="centerX" secondItem="2rH-qg-7Zk" secondAttribute="centerX" id="a8X-fJ-IYz"/>
-                                            <constraint firstItem="pfI-cS-kYH" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Ywd-Wb-It7" secondAttribute="bottom" constant="30" id="dLW-TS-18D"/>
+                                            <constraint firstItem="pfI-cS-kYH" firstAttribute="top" secondItem="Ywd-Wb-It7" secondAttribute="bottom" constant="20" id="dLW-TS-18D"/>
                                             <constraint firstItem="bd0-jY-azI" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2rH-qg-7Zk" secondAttribute="leading" constant="10" id="kl1-Az-wDd"/>
-                                            <constraint firstItem="bd0-jY-azI" firstAttribute="top" relation="greaterThanOrEqual" secondItem="bGT-ta-0m0" secondAttribute="bottom" constant="20" id="m4n-Cv-A1d"/>
                                             <constraint firstItem="bGT-ta-0m0" firstAttribute="leading" secondItem="IBm-Ox-TQc" secondAttribute="leading" id="uXM-aZ-Kma"/>
                                             <constraint firstItem="bGT-ta-0m0" firstAttribute="trailing" secondItem="IBm-Ox-TQc" secondAttribute="trailing" id="vyY-YY-c7t"/>
                                             <constraint firstAttribute="trailing" secondItem="IBm-Ox-TQc" secondAttribute="trailing" constant="20" id="yLf-wh-Jhu"/>
@@ -172,7 +177,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="IS7-gh-fs0" firstAttribute="bottom" secondItem="UUV-y3-LkF" secondAttribute="bottom" id="7s9-EI-ZLC"/>
-                            <constraint firstItem="UUV-y3-LkF" firstAttribute="top" secondItem="IS7-gh-fs0" secondAttribute="top" id="LpU-mr-7kw"/>
+                            <constraint firstItem="UUV-y3-LkF" firstAttribute="top" secondItem="5qE-ge-Ipt" secondAttribute="top" constant="20" id="LpU-mr-7kw"/>
                             <constraint firstItem="Yma-TR-BFL" firstAttribute="height" secondItem="5qE-ge-Ipt" secondAttribute="height" id="Ts6-Dw-43Z"/>
                             <constraint firstItem="Yma-TR-BFL" firstAttribute="width" secondItem="5qE-ge-Ipt" secondAttribute="width" id="WVy-In-p8a"/>
                             <constraint firstItem="Yma-TR-BFL" firstAttribute="top" secondItem="5qE-ge-Ipt" secondAttribute="top" id="XlD-mN-PHk"/>
